--- a/02-end-to-end/client/package.json
+++ b/02-end-to-end/client/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -18,8 +19,5 @@
     "vite": "^5.0.0",
     "vitest": "^1.0.0"
   }
-  ,
-  "scripts": {
-    "test": "vitest run"
-  }
+  
 }
