--- a/02-end-to-end/server/package.json
+++ b/02-end-to-end/server/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "postinstall": "npm --prefix ../client install && npm --prefix ../client run build && cp -r ../client/dist ./dist || true"
   },
   "dependencies": {
     "cors": "^2.8.5",
